@startuml IphoneDio
    interface ReprodutorMusical{
        +tocar():void
        +pausar():void
        +selecionarMusica():void
    }
    interface AparelhoTelefonico{
        +ligar():void
        +atender():void
        +iniciarCorreioVoz():void
    }

     interface NavegadorInternet{
        +exibirPagina():void
        +adicionarNovaAba():void
        +atualizarPagina():void
    }
    
    class Iphone{
    
    }
    Iphone -->ReprodutorMusical
    Iphone -->AparelhoTelefonico
    Iphone -->NavegadorInternet

@enduml 